# url-shortener

./: . detaignore  .env.template  .gitignore  LICENSE  Makefile  README.md  Spacefile  main.py  pyproject.toml  requirements.txt
.github/actions/python-setup/: action.yaml
.github/utils/: version_check.py
.github/workflows/: deploy.yaml  lint.yaml  test.yaml  workflow.yaml
app/: main.py
app/api/endpoints/: index.py  qr.py  router.py  url.py
app/api/schemas/: __init__.py  admin_url.py  create_url.py  peek_url.py  qr.py  url.py
app/core/: __init__.py  config.py  settings.py
app/domain/: __init__.py  exception.py  qr_image.py  secret_key.py  url.py
app/infrastructure/: __init__.py  abstract_database_client.py  config.py  database.py
app/infrastructure/deta/: __init__.py  base.py  config.py  database.py
app/repositories/: __init__.py  abstract_repository.py  url_repository.py
tests/: conftest.py  overrides.py  test_sample.py
tests/api/: test_index.py
tests/api/endpoints/: test_url.py
tests/core/: test_project_config_parser.py  test_settings.py
tests/domain/: test_secret_key.py  test_url_model.py
tests/infrastructure/: test_abstract_database_client.py  test_config.py  test_database.py
tests/infrastructure/deta/: test_base.py  test_detabase_client.py
tests/repositories/: test_abstract_repository.py  test_url_repository.py
