[tool.poetry]
name = "url-shortener"
version = "0.0.1a3"
description = "Url shortener API"
authors = ["Algirdas Jauniskis <jauniskis.a@gmail.com>"]
readme = "README.md"
packages=[{include = "app"}]
repository="https://github.com/ajauniskis/url-shortener"
license="MIT"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.20.0"
fastapi = "0.88.0"
uvicorn = "0.20.0"
deta = "1.1.0a3"
aiodeta = "0.1.2"
python-dotenv = "0.21.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
pyright = "^1.1.263"
bandit = "^1.7.4"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0"
pytest = "^7.1.3"
httpx = "^0.23.3"
isort = "^5.11.4"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pyright]
exclude = [
    "**/__pycache__",
    ".venv"
    ]
reportMissingImports = true

[tool.bandit]
exclude_dirs = [
    "**/__pycache__",
    ".venv",
    "tests"
    ]

[tool.flake8]
max-line-length = 88
exclude = [".venv", "__pycache__"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
