[tool.poetry]
name = "url-shortener"
version = "0.1.10"
description = "Url shortener API"
authors = ["Algirdas Jauniskis <jauniskis.a@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]
repository = "https://github.com/ajauniskis/url-shortener"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
deta = "^1.2.0"
python-dotenv = "^1.0.0"
toml = "^0.10.2"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pyright = "^1.1.318"
bandit = "^1.7.5"
flake8 = "^6.0"
Flake8-pyproject = "^1.2.3"
pytest = "^7.4.0"
httpx = "^0.24.1"
isort = "^5.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pyright]
exclude = ["**/__pycache__", ".venv"]
reportMissingImports = true

[tool.bandit]
exclude_dirs = ["**/__pycache__", ".venv", "tests"]

[tool.flake8]
max-line-length = 88
exclude = [".venv", "__pycache__"]
ignore = ["E203", "W503"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "pass",
    "@abstractmethod",
    "@abc.abstractmethod",
    "if TYPE_CHECKING:",
]
